--- a/x.css
+++ b/x.css
@@ -222,7 +222,8 @@ body>main p{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
 }
-.portfolio ol,
+
+
 .skill ol{
     max-width: 940px;
     margin-left:auto;
@@ -247,7 +248,7 @@ body>main p{
 .skill .skillcard{
    padding: 40px ;
 }
-.portfolio>nav>ol>li,
+
 .skill>ol .skillcard >li{
     list-style-type: none;
     float: left;
@@ -316,6 +317,82 @@ body>main p{
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   overflow: hidden;
+}
+.portfolio{
+    text-align: center;
+    margin-bottom: 200px;
+}
+.portfolio>nav
+{
+    max-width: 940px;
+    font-size: 0;
+    text-align: center;
+    display: inline-block;
+
+}
+.portfolio>nav>ol{
+    display: inline-block;
+    
+    vertical-align: top;
+}
+.portfolio>nav>ol>li
+{  
+    list-style: none;    
+    float: left;    
+    font-size: 18px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    color:  rgb(60, 67, 79);
+    box-sizing: border-box;
+    text-align: center;
+    margin-left: 40px;
+    cursor: pointer;
+
+}
+.portfolio>nav>ol>li:first-child{
+    margin-left: 0;
+
+}
+.portfolio>nav .bar{
+    
+    background: white;
+    margin-top: 7px;
+    margin-bottom: 28px;
+    height: 6px;
+    border-radius: 15px;
+    
+}
+.portfolio>nav  .bar-inner{
+    
+    background: #e6686a;
+    height: 100%;
+    border-radius: 15px;
+    transition: all 0.3s;
+    
+}
+.portfolio>nav .bar.state-1 .bar-inner{
+    margin-left: 0;
+    width: 40px;
+}
+.portfolio>nav .bar.state-2 .bar-inner{
+    margin-left: 75px;
+    width: 45px;
+}
+.portfolio>nav .bar.state-3 .bar-inner{
+    margin-left: 153px;
+    width: 104;
+}
+.portfolio .works{
+    position: relative;
+    max-width: 940px;
+    margin-left:auto;
+    margin-right:auto;
+    width: 100%;
+    height: 600px;
+}
+.portfolio .works .big,
+.portfolio .works .small{
+    position: absolute;
 }
 
 
