--- a/x.css
+++ b/x.css
@@ -107,11 +107,11 @@ ul>li{
 }
 .usercard{
     
-    max-width: 940px;
+    max-width: 930px;
     background:rgb(255, 255, 255);
     margin-left:auto;
     margin-right:auto;
-    margin-top: -330px;
+    margin-top: -340px;
     box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.52);
 }
 .usercard .selfie>img{
@@ -121,7 +121,7 @@ ul>li{
     background-size: cover;  
 }
 .usercard .selfieAndintro{
-    padding: 50px 50px;
+    padding: 65px 50px;
 }
 .intro .hello{
     background: #e6686a;
@@ -390,10 +390,7 @@ body>main p{
     width: 100%;
     height: 600px;
 }
-.portfolio .works .big,
-.portfolio .works .small{
-    position: absolute;
-}
+.portfolio .works .big,.portfolio .works .small{position: absolute;}
 
 
 
