--- a/x.css
+++ b/x.css
@@ -1,112 +1,79 @@
-.clearfix::after{
-    content:" ";
-    display: block;
-    clear: both;
-}
-body{
-    margin: 0px;
-    background: #efefef;
-    
-    
-}
-a{
-    text-decoration: none;
-}
-hr{
-    color:rgb(159, 162, 169);
-    height: 0;
-    border:none;
-    border-top: 1px solid;
+.clearfix::after{content:" ";display: block;clear: both;}
+body{margin: 0px;background: #efefef;   }
+a{text-decoration: none;}
+hr{color:rgb(159, 162, 169);height: 0;border:none;border-top: 1px solid;}
+ul>li{list-style: none;}
+*{padding: 0;margin: 0;}
 
-}
-ul>li{
-    list-style: none;
-}
-*{
-    padding: 0;
-    margin: 0;
 
-}
 
-.TopNavBar nav>ul>li>a{
-    
-    color: #9A9DA2;
+.TopNavBar nav>ul>li{
+    float: left;position: relative;
+    margin-left: 17px;margin-right: 17px;    
+}
+.TopNavBar nav>ul>li>a{    
+    color:inherit;
     font-size: 12px;
     font-weight: bold;
     border-bottom: 4px solid transparent;
     border-top: 4px solid transparent;
     display: block;
-    padding: 5px 0;
-    
-   
+    padding: 5px 0;  position: relative;
 }
-.TopNavBar nav>ul>li>a:hover{
-    
-    border-bottom: 3px solid  #e6686a ;
-
-    
-    
+.TopNavBar nav>ul>li>a::after{
+    content: '';display: none;
+    position: absolute;top: 100%;left: 0;border-radius: 3px;
+    height: 3px;width: 100%;background: #e6686a;
 }
-.TopNavBar nav{
-    float: right;
-    padding-bottom:  3px;
-    padding-top:  3px;
-    
-    
+.TopNavBar nav>ul>li.active>a::after{
+    display: block;animation: menuSlide 0.2s ease-out; 
+    /*transition:border-bottom: 3px solid   ;*/}
+@keyframes menuSlide{
+    0%{ width:0;} 100%{width:100%}
 }
-
-.TopNavBar nav>ul>li{
-    float: left;
-    margin-left: 17px;
-    margin-right: 17px;
-    
+/*.TopNavBar nav>ul>li.inactive>a::after{
+    display: block;
+    animation:op-menuSlide 0.2s ease-out;}
+    @keyframes op-menuSlide{
+        100%{ width:0;} 0%{width:100%}        
+    }*/
+.TopNavBar .submenu{ 
+    display: none;position: absolute;right:0;top:100%;
+    background: white;color: #757a83;
+    box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),0 1px 4px rgba(0, 0, 0, 0.24);
+    transition: all 0.2s ease-out}
+.TopNavBar li.active .submenu{display: block; animation: submenuSlide 0.2s ease-out; }
+@keyframes submenuSlide {
+    0%{margin-right:100%;opacity: 0;}   100%{margin-right:0%;opacity: 100%;}
 }
-
-.TopNavBar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    
-    width: 100%;
-    
-}
-.TopNavBar .inner{
-    padding: 24px 16px;
-}
+.TopNavBar .submenu > li{white-space: nowrap; padding: 5px 10px;cursor: pointer;}
+.TopNavBar nav{float: right;padding-bottom:  3px;padding-top:  3px;}
+.TopNavBar{ position: fixed;top: 0;left: 0; color:  #9A9DA2;width: 100%;}
+.TopNavBar .inner{  padding: 24px 16px;transition: all 0.5s;}
 .TopNavBar .logo{
     float: left;
     font-size: 30px;
     font-family:Malgun Gothic;
     font-weight: bold;
     padding-top: 0px;
-    
-
 }
-.TopNavBar .logo .rs{
-    color: #e6686a;
-    margin-right: 4px;
-    
-    
+.TopNavBar .logo .rs{color: #e6686a; margin-right: 4px;}
+.TopNavBar.sticky{
+    background: rgb(255, 255, 255);
+    transition: all 0.5s; color:#3d4451;
+    z-index: 1;box-shadow:0 0 10px rgba(0, 0, 0, 0.3);
 }
-.TopNavBar .logo .card{
-    color: #9A9DA2;
-
-}
+.TopNavBar > .inner.sticky{padding: 12px 16px;transition: all 0.5s;}
+.TopNavBar .logo .card{color: #9A9DA2;}
 
 
-.banner {
-    background-image: url(./img/1.jpg) ;
-    background-position: center center;
-    height: 515px;
-    
-}
-.banner .mask{
-    background-color: rgba(0,0,0,40%);
-    height: 515px;
-    background-size: cover;
-}
-.usercard{
-    
+
+.banner {background-image: url(./img/1.jpg) ;background-position: center center;height: 515px;}
+.banner .mask{background-color: rgba(0,0,0,40%);height: 515px;background-size: cover;}
+
+
+
+.usercard{    
     max-width: 930px;
     background:rgb(255, 255, 255);
     margin-left:auto;
@@ -114,84 +81,38 @@ ul>li{
     margin-top: -340px;
     box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.52);
 }
-.usercard .selfie>img{
-    width: 290px;
-    height: 330px;
-    
-    background-size: cover;  
-}
-.usercard .selfieAndintro{
-    padding: 65px 50px;
-}
-.intro .hello{
-    background: #e6686a;
-    padding: 2px 10px;
-    color: white;
-    position: relative;
-}
+.usercard .selfie>img{width: 290px;height: 330px;   background-size: cover;}
+.usercard .selfieAndintro{padding: 65px 50px;}
+.intro .hello{background: #e6686a;padding: 2px 10px;color: white;position: relative;}
 .intro .triangle{
     display: block;
     border:10px transparent solid;
     width:0;
-    border-top-color: #e6686a;
-    border-left-width:0;
-    position: absolute;
-    left:10%;
-    top:100%;
-
+    border-top-color: #e6686a;border-left-width:0;
+    position: absolute;left:10%;top:100%;
 }
 .intro{
     float: left;
     margin-left: 65px;
     width: 470px;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    
+    font-weight: bold;    
 }
-.selfie{
-    float: left;
-}
-.intro hr{
-   margin:25px 0;
-    
-}
-
-.intro dl>dt{
-    float: left;
-    width: 40%;
-    padding: 5px 0;
-    color: rgb(60, 67, 79);
-    
-}
-.intro dl>dd{
-    float: left;
-    width:60%;
-    padding: 5px 0;
-    color: #9A9DA2
-}
-.usercard .media{
-    background-color:#e6686a;
-    text-align: center;
-     
-}
-.usercard svg{
-    width: 30px;
-    height: 30px;
-    fill: #efefef;  
-    vertical-align: top;
-
-}
+.selfie{float: left;}
+.intro hr{margin:25px 0;}
+.intro dl>dt{float: left;width: 40%;padding: 5px 0;color: rgb(60, 67, 79);   }
+.intro dl>dd{  float: left;  width:60%; padding: 5px 0;color: #9A9DA2}
+.usercard .media{ background-color:#e6686a;text-align: center;    }
+.usercard svg{width: 30px;height: 30px;fill: #efefef;  vertical-align: top;}
 .usercard .media>a{
-
     margin: 20px 20px;
     padding: 5px;
     border-radius: 50%;
     display: inline-block;
 }
-.usercard .media >a:hover{
-    background-color: rgba(0, 0, 0, 0.1);
-    
-}
+.usercard .media >a:hover{background-color: rgba(0, 0, 0, 0.1);    }
+
+
 
 body>main .download>a{
     font-size:14px;
@@ -204,17 +125,10 @@ body>main .download>a{
     color: rgb(60, 67, 79);
     margin-top: 32px;
     margin-bottom: 44px;
-    transition: 0.3s;
-
-    
+    transition: 0.3s;   
 }
-body>main .download{
-    text-align: center;
-    
-}
-body>main .download>a:hover{
-    box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.2);
-}
+body>main .download{text-align: center;    }
+body>main .download>a:hover{box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.2);}
 body>main p{
     max-width: 940px;
     margin-left:auto;
@@ -224,16 +138,13 @@ body>main p{
 }
 
 
+
 .skill ol{
-    max-width: 940px;
-    margin-left:auto;
-    margin-right:auto;
+    max-width: 940px;margin-left:auto;margin-right:auto;
     background: rgb(255, 255, 255);
     box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.52);
-
 }
-.portfolio>h2,
-.skill>h2{
+.portfolio>h2,.skill>h2{
     color: #3d4451;
     font-size: 34px;
     line-height: 1.2;
@@ -241,14 +152,8 @@ body>main p{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     margin: 70px 0 30px;
-
-
-
 }
-.skill .skillcard{
-   padding: 40px ;
-}
-
+.skill .skillcard{padding: 40px ;}
 .skill>ol .skillcard >li{
     list-style-type: none;
     float: left;
@@ -259,13 +164,10 @@ body>main p{
     font-weight: bold;
     color:  rgb(60, 67, 79);
     box-sizing: border-box;
-    
-
 }
 .skill .meter { 
     margin-top: 15px;
-    height: 10px;
-    
+    height: 10px;   
 	position: relative;
 	background: #555;
 	-moz-border-radius: 25px;
@@ -276,24 +178,20 @@ body>main p{
 }
 .skill .meter > span {
   display: block;
-  height: 100%;
-  
+  height: 100%; 
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   background-color: rgb(232,103,107);
-  
   background-image: linear-gradient(
     center bottom,
     rgb(43,194,83) 37%,
-    rgb(84,240,84) 69%
-  );
+    rgb(84,240,84) 69%);
   box-shadow: 
     inset 0 5px 9px  rgba(255,255,255,0.3),
     inset 0 -2px 6px rgba(0,0,0,0.4);
-  position: relative;
-  overflow: hidden;
+  position: relative;overflow: hidden;
 }
 .meter > span::after {
   content: "";
@@ -307,34 +205,19 @@ body>main p{
     rgba(255, 255, 255, .2) 50%, 
     rgba(255, 255, 255, .2) 75%, 
     transparent 75%, 
-    transparent
-  );
-  z-index: 1;
-  background-size: 50px 50px;
-  animation: move 2s linear infinite;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  overflow: hidden;
+    transparent);
+    z-index: 1;
+    background-size: 50px 50px;
+    animation: move 2s linear infinite;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    overflow: hidden;
 }
-.portfolio{
-    text-align: center;
-    margin-bottom: 200px;
-}
-.portfolio>nav
-{
-    max-width: 940px;
-    font-size: 0;
-    text-align: center;
-    display: inline-block;
-
-}
-.portfolio>nav>ol{
-    display: inline-block;
-    
-    vertical-align: top;
-}
+.portfolio{text-align: center;margin-bottom: 200px;}
+.portfolio>nav {max-width: 940px;font-size: 0;text-align: center;display: inline-block;}
+.portfolio>nav>ol{display: inline-block;    vertical-align: top;}
 .portfolio>nav>ol>li
 {  
     list-style: none;    
@@ -347,48 +230,28 @@ body>main p{
     text-align: center;
     margin-left: 40px;
     cursor: pointer;
-
 }
-.portfolio>nav>ol>li:first-child{
-    margin-left: 0;
-
-}
-.portfolio>nav .bar{
-    
+.portfolio>nav>ol>li:first-child{margin-left: 0;}
+.portfolio>nav .bar{  
     background: white;
     margin-top: 7px;
     margin-bottom: 28px;
     height: 6px;
-    border-radius: 15px;
-    
+    border-radius: 15px;    
 }
-.portfolio>nav  .bar-inner{
-    
+.portfolio>nav  .bar-inner{  
     background: #e6686a;
     height: 100%;
     border-radius: 15px;
-    transition: all 0.3s;
-    
+    transition: all 0.3s;  
 }
-.portfolio>nav .bar.state-1 .bar-inner{
-    margin-left: 0;
-    width: 40px;
-}
-.portfolio>nav .bar.state-2 .bar-inner{
-    margin-left: 75px;
-    width: 45px;
-}
-.portfolio>nav .bar.state-3 .bar-inner{
-    margin-left: 153px;
-    width: 104;
-}
+.portfolio>nav .bar.state-1 .bar-inner{margin-left: 0; width: 40px;}
+.portfolio>nav .bar.state-2 .bar-inner{margin-left: 75px;width: 45px;}
+.portfolio>nav .bar.state-3 .bar-inner{ margin-left: 153px;width: 104;}
 .portfolio .works{
-    position: relative;
-    max-width: 940px;
-    margin-left:auto;
-    margin-right:auto;
-    width: 100%;
-    height: 600px;
+    position: relative;max-width: 940px;
+    margin-left:auto; margin-right:auto;
+    width: 100%;height: 600px;
 }
 .portfolio .works .big,.portfolio .works .small{position: absolute;}
 
