增加高亮导航栏元素效果；增加浏览元素上下滑效果

--- a/x.css
+++ b/x.css
@@ -5,7 +5,10 @@ hr{color:rgb(159, 162, 169);height: 0;border:none;border-top: 1px solid;}
 ul>li{list-style: none;}
 *{padding: 0;margin: 0;}
 
-
+.slideUp.offset{transform: translateY(140px);}
+.slideUp{transform: translateY(0);transition:  all 0.5s ease-out;}
+.TopNavBar.slideDown.offset{transform: translateY(-88px);}
+.TopNavBar.slideDown{transform: translateY(0);transition: all  0.5s ease-out;}
 
 .TopNavBar nav>ul>li{
     float: left;position: relative;
@@ -25,7 +28,8 @@ ul>li{list-style: none;}
     position: absolute;top: 100%;left: 0;border-radius: 3px;
     height: 3px;width: 100%;background: #e6686a;
 }
-.TopNavBar nav>ul>li.active>a::after{
+.TopNavBar nav>ul>li.active>a::after,
+.TopNavBar nav>ul>li.highlight>a::after{
     display: block;animation: menuSlide 0.2s ease-out; 
     /*transition:border-bottom: 3px solid   ;*/}
 @keyframes menuSlide{
@@ -151,7 +155,7 @@ body>main p{
     font-weight: 600;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    margin: 70px 0 30px;
+    margin: 110px 0 30px;
 }
 .skill .skillcard{padding: 40px ;}
 .skill>ol .skillcard >li{
@@ -174,7 +178,8 @@ body>main p{
 	-webkit-border-radius: 25px;
 	border-radius: 25px;
 	padding: 4px;
-	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+    box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+    overflow: hidden;
 }
 .skill .meter > span {
   display: block;
@@ -192,8 +197,12 @@ body>main p{
     inset 0 5px 9px  rgba(255,255,255,0.3),
     inset 0 -2px 6px rgba(0,0,0,0.4);
   position: relative;overflow: hidden;
+  transform: translateX(0);transition: all 1s ease-out;
 }
-.meter > span::after {
+.skill.offset .meter > span {
+    transform: translateX(-100%);
+}
+.skill .meter > span::after {
   content: "";
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
@@ -214,7 +223,14 @@ body>main p{
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     overflow: hidden;
+    transform: translateX(0);transition: all 0.5s ease-out;
 }
+.skill.offset .meter> span::after{
+    transform: translateX(-100%);
+}
+
+
+
 .portfolio{text-align: center;margin-bottom: 200px;}
 .portfolio>nav {max-width: 940px;font-size: 0;text-align: center;display: inline-block;}
 .portfolio>nav>ol{display: inline-block;    vertical-align: top;}
