--- a/x.css
+++ b/x.css
@@ -10,10 +10,7 @@ ul>li{list-style: none;}
 .TopNavBar.slideDown.offset{transform: translateY(-88px);}
 .TopNavBar.slideDown{transform: translateY(0);transition: all  0.5s ease-out;}
 
-.TopNavBar nav>ul>li{
-    float: left;position: relative;
-    margin-left: 17px;margin-right: 17px;    
-}
+.TopNavBar nav>ul>li{float: left;position: relative;margin-left: 17px;margin-right: 17px;    }
 .TopNavBar nav>ul>li>a{    
     color:inherit;
     font-size: 12px;
@@ -197,7 +194,7 @@ body>main p{
     inset 0 5px 9px  rgba(255,255,255,0.3),
     inset 0 -2px 6px rgba(0,0,0,0.4);
   position: relative;overflow: hidden;
-  transform: translateX(0);transition: all 1s ease-out;
+  transform: translateX(0);transition: all 1s ease-out 0.5s;
 }
 .skill.offset .meter > span {
     transform: translateX(-100%);
